# personify

./: .gitignore  README.md  practice_1.ipynb  practice_2.ipynb  pyproject.toml
src/personify/: crew.py  main.py
src/personify/config/: agents.yaml  tasks.yaml
src/personify/tools/: __init__.py
