[project]
name = "personify"
version = "0.1.0"
description = "personify using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
personify = "personify.main:run"
run_crew = "personify.main:run"
train = "personify.main:train"
replay = "personify.main:replay"
test = "personify.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
